# submission_scanx

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/dev_tools/: README.md  main.py  pyproject.toml
src/dev_tools/templates/: base.html  content.html  dashboard.html  human_loop.html  index.html  pages.html  search.html  viewer.html
src/scanx_tools/: __init__.py  history.json  main.py  pyproject.toml
src/scanx_tools/jobs/: 6836f04f.json
src/scanx_tools/jobs/20251210_163258_8bcac9ce/: job_state.json
src/scanx_tools/jobs/20251210_163258_8bcac9ce/mapping/: statement.csv
src/scanx_tools/jobs/20251210_163258_8bcac9ce/metadata/: index.json  ไพลิน_เทียนสุวรรณ_สมาชิกสภาผู้แทนราษฎร_(ส.ส.)_กรณีพ้นจากตำแหน่ง_15_พ.ค._2566_metadata.json
src/scanx_tools/jobs/20251210_163258_8bcac9ce/text/: ไพลิน_เทียนสุวรรณ_สมาชิกสภาผู้แทนราษฎร_(ส.ส.)_กรณีพ้นจากตำแหน่ง_15_พ.ค._2566.json
src/scanx_tools/jobs/20251211_183540_5133df46/: job_state.json
src/scanx_tools/jobs/20251211_183540_5133df46/mapping/: submitter_position.csv  summary.csv
src/scanx_tools/jobs/20251211_183540_5133df46/matched/: เสถียร_สายสูง_นายกเทศมนตรีตำบล_กรณีพ้นจากตำแหน่ง_20_มี.ค._2567.json
src/scanx_tools/jobs/20251211_183540_5133df46/metadata/: index.json  เสถียร_สายสูง_นายกเทศมนตรีตำบล_กรณีพ้นจากตำแหน่ง_20_มี.ค._2567_metadata.json
src/scanx_tools/jobs/20251211_183540_5133df46/text/: เสถียร_สายสูง_นายกเทศมนตรีตำบล_กรณีพ้นจากตำแหน่ง_20_มี.ค._2567.json
src/scanx_tools/jobs/20251211_205001_76ffedda/: job_state.json
src/scanx_tools/jobs/20251211_205001_76ffedda/matched/: ไกรบุญ_ทรวดทรง_ประธานกรรมการ_(ม.102_(7))_กรณีดำรงตำแหน่งครบสามปี_13_ม.ค._2566.json
src/scanx_tools/jobs/20251211_205001_76ffedda/metadata/: index.json  ไกรบุญ_ทรวดทรง_ประธานกรรมการ_(ม.102_(7))_กรณีดำรงตำแหน่งครบสามปี_13_ม.ค._2566_metadata.json
src/scanx_tools/jobs/20251211_205001_76ffedda/ocr/: ไกรบุญ_ทรวดทรง_ประธานกรรมการ_(ม.102_(7))_กรณีดำรงตำแหน่งครบสามปี_13_ม.ค._2566.json
src/scanx_tools/jobs/20251211_205001_76ffedda/text/: index.json  ไกรบุญ_ทรวดทรง_ประธานกรรมการ_(ม.102_(7))_กรณีดำรงตำแหน่งครบสามปี_13_ม.ค._2566.json
src/scanx_tools/jobs/20251212_171923_bbc716d1/: job_state.json
src/scanx_tools/jobs/20251212_171923_bbc716d1/mapping/: asset_building_info.csv  spouse_info.csv  spouse_position.csv
src/scanx_tools/jobs/20251212_171923_bbc716d1/metadata/: เสถียร_สายสูง_นายกเทศมนตรีตำบล_กรณีพ้นจากตำแหน่ง_20_มี.ค._2567_metadata.json
src/scanx_tools/jobs/20251212_171923_bbc716d1/ocr/: เสถียร_สายสูง_นายกเทศมนตรีตำบล_กรณีพ้นจากตำแหน่ง_20_มี.ค._2567.json
src/scanx_tools/jobs/20251212_172620_5c2a5c36/: job_state.json
src/scanx_tools/jobs/20251212_172620_5c2a5c36/matched/: เอกธนัช_อินทร์รอด_สมาชิกสภาผู้แทนราษฎร_(ส.ส.)_กรณีเข้ารับตำแหน่ง_15_ต.ค._2562.json
src/scanx_tools/jobs/20251213_013048_edc89c43/: job_state.json
src/scanx_tools/jobs/20251213_020926_d19a9bdc/: job_state.json
src/scanx_tools/jobs/20251213_022937_7dbd4ded/: job_state.json
src/scanx_tools/jobs/20251213_084059_51cd5bba/: job_state.json
src/scanx_tools/jobs/20251213_102142_f9b4778a/: job_state.json
src/scanx_tools/templates/: index.html  results.html
src/scanx_tools/workspace/mapping/: asset_other_asset_info.csv  asset_vehicle_info.csv
src/scanx_tools/workspace/text/: index.json
(+4152 files in other folders)
