[tool.poetry]
name = "pipeline-dev-tools"
version = "0.1.0"
description = "Development tools for NACC Pipeline"
authors = ["Developer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
pandas = "^2.0.0"

[tool.poetry.scripts]
dev-tools = "main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
