[tool.poetry]
name = "scanx-tools"
version = "1.0.0"
description = "ScanX Tools - Modern Document Processing Panel"
authors = ["ScanX Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
aiofiles = "^23.2.1"

[tool.poetry.scripts]
scanx-tools = "main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
